[package]
name = "is_none_or"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple utility function for the Option type"
documentation = "https://docs.rs/is_none_or"
repository = "https://github.com/PokeJofeJr4th/is_none_or"
homepage = "https://github.com/PokeJofeJr4th/is_none_or"
keywords = ["option", "utility"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
